--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "classnames": "^2.3.1",
+    "framer-motion": "^6.5.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
