--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.2",
     "mongoose": "^8.2.4",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
