--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.2.4",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
